<resources>
    <string name="app_name">CallLogCalendar</string>
    <string name="connected">Connected</string>
    <string name="unconnected">Unconnected</string>
    <string name="voice_mail">Voice Mail</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="answered_externally">Answered Externally</string>
    <string name="missed">Missed</string>
    <string name="rejected">Rejected</string>
    <string name="blocked">Blocked</string>
    <string name="total">Total</string>
    <string name="week_mode">Week Mode</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="connected_cnt_format">%d건</string>
    <string name="connected_sec_format">%d초</string>
    <string name="unconnected_format">%d건</string>
    <string name="voice_mail_format">%d건</string>
</resources>